[package]
name = "zspider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-parser-rs = "0.1.0"
html_parser = "0.7.0"
reqwest = {version = "0.12.4", features = ['json']}
tl = "0.7.8"
tokio = {version ="1.37.0",features = ['full']}
